eks-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-monitoring
  labels:
    app: url-monitoring
spec:
  type: ClusterIP
  selector:
    app: url-monitoring
  ports:
    - name: http
      port: 3000
      targetPort: http
